# solution-zipper

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/solution_zipper/: __init__.py  cli.py  git_solutions.py  solution_zipper.py
